# File_Cleanup

./: .gitignore  Crontab Example.md  Crontab Example.txt  DesktopCleanUp.py  FileCleanup.py  README.md  config.toml  pyproject.toml  setup.cfg
FileCleanup/: file_cleanup.py  symlink_config.py
FileCleanup/FileCleanup.egg-info/: PKG-INFO
FileCleanup/config/: config.toml
python/: pyproject.toml
python/FileCleanup/: file_cleanup.py  symlink_config.py
python/FileCleanup/config/: __init__.py
rust/file_cleanup/: Cargo.toml  notes.md
rust/file_cleanup/src/: config.rs  lib.rs  main.rs
rust/file_cleanup/tests/data/: test_data.toml
src/FileCleanup/: FileCleanup.py  file_cleanup.py
src/FileCleanup/config/: __init__.py  config.toml
