[metadata]
name = FileCleanup
version = 1.0.0
description = Python script used to run automated file cleanups
long_description = file: README.md
author = Casey Compton
author_email = Ccompton42@gmail.com




[options]
python_requires = >=3.11, < 4
package_dir =
    = src
packages = find:


[options.packages.find]
where = src
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    fclean = FileCleanup.FileCleanup:main